# OneMind

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
public/models/: office-chair.glb  typing.glb  wood-cabinet.glb
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  process.rs  registry.rs  session.rs
src-tauri/src/adapters/: claude.rs  generic.rs  mod.rs
src/components/ai-elements/: conversation.tsx  markdown.tsx  message.tsx  prompt-input.tsx  reasoning.tsx  tool.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  select.tsx  slider.tsx  switch.tsx  textarea.tsx
src/components/workspace/: add-agent-view.tsx  agent-mascot.tsx  board-view.tsx  office-3d.tsx  settings.tsx  titlebar.tsx  welcome.tsx  workspace-sidebar.tsx  workspace.tsx
src/hooks/: useAgentSession.ts  useSettings.ts
src/lib/: chat.ts
src/styles/: globals.css
