[package]
name = "onemind"
version = "0.1.0"
description = "OneMind — 本地多智能体统一客户端"
authors = ["OneMind"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique from the bin name (Windows quirk).
name = "onemind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
